src/assets/styles/_filter-drawer.scss
@import 'colors';

$block-class: 'filter-drawer';

@at-root {
    .#{$block-class} {
        padding: 0 2.5rem;

        &__title-panel {
            justify-content: space-between;
            margin-top: 1rem;
        }

        & &__title {
            margin: .5rem 0;
            color: $default-gray;
        }

        &__help {
            color: $default-gray;
            margin-bottom: 0.3rem;
            margin-left: 0.5rem;
        }

        & &__close-icon {
            margin: .75rem .4rem .2rem .2rem;
            color: $default-gray;
        }
        
        & &__options-panel {
            display: flex;
            flex-direction: column;
            margin-top: 0.2rem;
        }

        & &__slider-panel {
            margin-top: 0.6rem;
            width: calc(100% + 1rem);
        }

        &__slider-label {
            color: $default-gray;
        }

        & &__slider-body {
            min-width: 9.5rem;
            margin-left: 0.6rem;
        }

        & &__slider {
            color: $dark-blue;
            width: 80%;
        }

        & &__button-control-panel {
            display: flex;
            align-items: center;
            margin-top: 1.9rem;
            justify-content: space-evenly;
        }
    }

}

